updated res.status in accordance with rubric
